refractored state; added group by city

--- a/bootstrap_state.ipynb
+++ b/bootstrap_state.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "import urllib.request\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn import datasets\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "%matplotlib inline\n",
-    "import plotnine as p9"
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +291,7 @@
        "[5 rows x 128 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +312,7 @@
        "742253"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +903,7 @@
        "[742253 rows x 85 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1487,7 @@
        "[51537 rows x 85 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1509,7 @@
        "False"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,10 +1538,12 @@
     "  y_pred = dtree.predict(xtest)\n",
     "  trainAccuracy = accuracy_score(y_true = ytrain, y_pred = dtree.predict(xtrain))\n",
     "  testAccuracy = accuracy_score(y_true = ytest, y_pred = y_pred)\n",
+    "  \n",
     "  if testAccuracy > maxTestAccuracy:\n",
     "    maxTrainAccuracy = trainAccuracy\n",
     "    maxTestAccuracy = testAccuracy\n",
     "    index = len(solve)\n",
+    "    \n",
     "  solve.append({\n",
     "    'col': col,\n",
     "    'input': input,\n",
@@ -1569,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
