changing accessing csv file route

--- a/Machine Learning Analysis/bootstrap_city.ipynb
+++ b/Machine Learning Analysis/bootstrap_city.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,21 +10,22 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "import os\n",
     "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_12174/2033632590.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv('COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv').head(800000).sort_values(['city'])\n"
+      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_13440/172524430.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['city'])\n"
      ]
     },
     {
@@ -292,19 +293,19 @@
        "[5 rows x 128 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv').head(800000).sort_values(['city'])\n",
+    "data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['city'])\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +314,7 @@
        "742253"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +905,7 @@
        "[742253 rows x 85 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1489,7 @@
        "[51537 rows x 85 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1511,7 @@
        "False"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
