--- a/Machine Learning Analysis/bootstrap_state.ipynb
+++ b/Machine Learning Analysis/bootstrap_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,20 +10,22 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "import os\n",
     "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_11304/468132992.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n"
+      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_13545/2447808291.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['state'])\n"
      ]
     },
     {
@@ -291,19 +293,19 @@
        "[5 rows x 128 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv').head(800000).sort_values(['state'])\n",
+    "data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['state'])\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +314,7 @@
        "742253"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +905,7 @@
        "[742253 rows x 85 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1489,7 @@
        "[51537 rows x 85 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1511,7 @@
        "False"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
