--- a/Preliminary Analysis/dClean.ipynb
+++ b/Preliminary Analysis/dClean.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib as plt"
+    "import matplotlib as plt\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
        "      <td>268.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>280.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -82,7 +83,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -92,7 +93,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -102,7 +103,7 @@
        "      <td>422.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>679.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -112,7 +113,7 @@
        "      <td>536.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1554.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -259,11 +260,11 @@
        "14999                     882.0   \n",
        "\n",
        "       total_patients_hospitalized_confirmed_influenza_7_day_sum  \n",
-       "0                                                    NaN          \n",
-       "1                                                    NaN          \n",
-       "2                                                    NaN          \n",
-       "3                                                    NaN          \n",
-       "4                                                    NaN          \n",
+       "0                                                    0.0          \n",
+       "1                                                    0.0          \n",
+       "2                                                    0.0          \n",
+       "3                                                    0.0          \n",
+       "4                                                    0.0          \n",
        "...                                                  ...          \n",
        "14995                                                0.0          \n",
        "14996                                                0.0          \n",
@@ -280,7 +281,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('cleanV2.csv')\n",
+    "data = pd.read_csv(os.path.expanduser('../Data/cleanV2.csv'))\n",
     "sliced = data[['inpatient_beds_used_covid_7_day_sum', \n",
     "\n",
     "'total_patients_hospitalized_confirmed_covid_7_day_sum'\n",
@@ -296,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataScience-FoTI7s4Z",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -310,12 +311,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af53be0080abca7f7fc7946b3f1d00d94a244c712df27b185973700c8ffa0381"
+    "hash": "5f8929016d30f12a89eab5b5e02a6c1410fc73da4b23b89b4eb7a3bc58137fe5"
    }
   }
  },
