--- a/Machine Learning Analysis/bootstrap_filtered.ipynb
+++ b/Machine Learning Analysis/bootstrap_filtered.ipynb
@@ -803,7 +803,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -817,12 +817,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5f8929016d30f12a89eab5b5e02a6c1410fc73da4b23b89b4eb7a3bc58137fe5"
+    "hash": "793e1c3583c4c2649ad3fb639f030d9c116c6f8ff8b7683fb3d40af4e681ac4a"
    }
   }
  },
