margin of error

--- a/Machine Learning Analysis/bootstrap_city.ipynb
+++ b/Machine Learning Analysis/bootstrap_city.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_13440/172524430.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_18126/172524430.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['city'])\n"
      ]
     },
@@ -293,7 +293,7 @@
        "[5 rows x 128 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "742253"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
        "[742253 rows x 85 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
        "[51537 rows x 85 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1574,15 +1574,24 @@
       "name: total_adult_patients_hospitalized_confirmed_and_suspected_covid_7_day_sum\n",
       "index: 25\n",
       "max training accuracy 0.8710464310464311\n",
-      "max test accuracy 0.8624369421808304\n"
+      "max test accuracy 0.8624369421808304\n",
+      "margin of error: 0.005429224783651136\n",
+      "0.8624369421808304 +- 0.005429224783651136\n"
      ]
     }
    ],
    "source": [
+    "from math import sqrt\n",
+    "\n",
     "print('name:',solve[index].get('col'))\n",
     "print(\"index:\",index)\n",
     "print('max training accuracy',maxTrainAccuracy)\n",
-    "print('max test accuracy',maxTestAccuracy)"
+    "print('max test accuracy',maxTestAccuracy)\n",
+    "\n",
+    "interval = 1.96 * sqrt((maxTestAccuracy * (1 - maxTestAccuracy)) / len(solve[index].get('ytest')))\n",
+    "print('margin of error:',interval)\n",
+    "\n",
+    "print(maxTestAccuracy,'+-',interval)"
    ]
   }
  ],
