--- a/Machine Learning Analysis/bootstrap_state.ipynb
+++ b/Machine Learning Analysis/bootstrap_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_13545/2447808291.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['state'])\n"
+      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_17430/3825003464.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\n"
      ]
     },
     {
@@ -299,7 +299,10 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(os.path.expanduser('../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv')).head(800000).sort_values(['state'])\n",
+    "data = pd.read_csv(\n",
+    "  os.path.expanduser(\n",
+    "    '../Data/COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv'\n",
+    "  )).head(800000).sort_values(['state'])\n",
     "data.head()"
    ]
   },
@@ -1564,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1574,21 +1577,44 @@
       "name: total_adult_patients_hospitalized_confirmed_and_suspected_covid_7_day_sum\n",
       "index: 25\n",
       "max training accuracy 0.8714067914067914\n",
-      "max test accuracy 0.8612727978269306\n"
+      "max test accuracy 0.8612727978269306\n",
+      "margin of error: 0.005448468144899889\n",
+      "0.8612727978269306 +- 0.005448468144899889\n"
      ]
     }
    ],
    "source": [
+    "from math import sqrt \n",
+    "\n",
     "print('name:',solve[index].get('col'))\n",
-    "print(\"index:\",index)\n",
+    "print('index:',index)\n",
     "print('max training accuracy',maxTrainAccuracy)\n",
-    "print('max test accuracy',maxTestAccuracy)"
+    "print('max test accuracy',maxTestAccuracy)\n",
+    "\n",
+    "interval = 1.96 * sqrt((maxTestAccuracy * (1 - maxTestAccuracy)) / len(solve[index].get('ytest')))\n",
+    "print('margin of error:',interval)\n",
+    "\n",
+    "print(maxTestAccuracy,'+-',interval)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataScience-FoTI7s4Z",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1602,12 +1628,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af53be0080abca7f7fc7946b3f1d00d94a244c712df27b185973700c8ffa0381"
+    "hash": "5f8929016d30f12a89eab5b5e02a6c1410fc73da4b23b89b4eb7a3bc58137fe5"
    }
   }
  },
